--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Студия</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;700;900&display=swap"
+    />
+    <link rel="stylesheet" href="./normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
 
     <header>
       <nav>
-        <a href="./">Web Studio</a>
+        <a href="./" class="logo"
+          ><div class="web">Web</div>
+          <div class="studio">Studio</div></a
+        >
 
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+        <ul class="nav">
+          <li><a href="" class="link">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
 
-        <address>
+        <address class="addres">
           <a href="mailto:info@example.com">info@example.com</a>
           <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
@@ -29,20 +38,20 @@
     <!-- Герой -->
 
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
+      <section class="hero">
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
       </section>
 
       <!-- Преимущества -->
 
-      <section>
+      <section class="advantages">
         <h2>Преимущества</h2>
         <ul>
           <li>
             <img src="./" alt="Антена" width="70" />
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="title-inf">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -50,8 +59,8 @@
 
           <li>
             <img src="./" alt="Часы" width="70" />
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="title-inf">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -59,8 +68,8 @@
 
           <li>
             <img src="./" alt="Диаграмма" width="70" />
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="title-inf">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -68,8 +77,8 @@
 
           <li>
             <img src="./" alt="Астронавт" width="70" />
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="title-inf">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -79,30 +88,30 @@
 
       <!-- Чем мы занимаемся -->
 
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="work">
+        <h2 class="subtitle">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/img1.jpg" alt="Ноутбук" width="370" />
-            <h3>Десктопные приложения</h3>
+            <h3 class="signature">Десктопные приложения</h3>
           </li>
 
           <li>
             <img src="./images/img2.jpg" alt="Смартфон" width="370" />
-            <h3>Мобильные приложения</h3>
+            <h3 class="signature">Мобильные приложения</h3>
           </li>
 
           <li>
             <img src="./images/img3.jpg" alt="Рабочий стол" width="370" />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="signature">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
 
       <!-- Наша команда -->
 
-      <section>
-        <h2>Наша команда</h2>
+      <section class="team">
+        <h2 class="subtitle">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -110,7 +119,7 @@
               alt="Николай Кучеренко"
               width="270"
             />
-            <h3>Николай Кучеренок</h3>
+            <h3 class="name">Николай Кучеренок</h3>
             <p>Product Designer</p>
             <ul>
               <li>
@@ -134,7 +143,7 @@
               alt="Ольга Иванова"
               width="270"
             />
-            <h3>Ольга Иванова</h3>
+            <h3 class="name">Ольга Иванова</h3>
             <p>Frontend Developer</p>
             <ul>
               <li>
@@ -158,7 +167,7 @@
               alt="Николай Кучеренко"
               width="270"
             />
-            <h3>Андрей Шевченко</h3>
+            <h3 class="name">Андрей Шевченко</h3>
             <p>Marketing</p>
             <ul>
               <li>
@@ -182,7 +191,7 @@
               alt="Николай Кучеренко"
               width="270"
             />
-            <h3>Иван Николаев</h3>
+            <h3 class="name">Иван Николаев</h3>
             <p>UI Designer</p>
             <ul>
               <li>
@@ -205,29 +214,37 @@
       <!-- Постоянные клиенты -->
 
       <section>
-        <h2>Постоянные клиенты</h2>
+        <h2 class="subtitle">Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""><img src="./" alt="Первый клиент" width="45" /></a>
+            <a href="" class="customer"
+              ><img src="./" alt="Первый клиент" width="45"
+            /></a>
           </li>
 
           <li>
-            <a href=""><img src="./" alt="Второй клиент" width="40" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./" alt="Третий клиент" width="41" /></a>
-          </li>
-          <li>
-            <a href=""><img src="./" alt="Четвертый клиент" width="80" /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/logo5.svg" alt="Пятый клиент" width="59"
+            <a href="" class="customer"
+              ><img src="./" alt="Второй клиент" width="40"
             /></a>
           </li>
           <li>
-            <a href=""
-              ><img src="./images/logo6.svg" alt="Шестой клиент" width="89"
+            <a href="" class="customer"
+              ><img src="./" alt="Третий клиент" width="41"
+            /></a>
+          </li>
+          <li>
+            <a href="" class="customer"
+              ><img src="./" alt="Четвертый клиент" width="80"
+            /></a>
+          </li>
+          <li>
+            <a href="" class="customer"
+              ><img src="./" alt="Пятый клиент" width="59"
+            /></a>
+          </li>
+          <li>
+            <a href="" class="customer"
+              ><img src="./" alt="Шестой клиент" width="89"
             /></a>
           </li>
         </ul>
@@ -236,14 +253,17 @@
     <!-- Футер -->
 
     <footer>
-      <a href="">Web Studio</a>
+      <a href="./" class="logo">
+        <div class="web">Web</div>
+        <div class="studio-white">Studio</div>
+      </a>
       <address>
         <span>г. Киев, пр-т Леси Украинки, 26</span>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <a href="mailto:info@example.com" class="link">info@example.com</a>
+        <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
       </address>
       <div>
-        <p>Присоединяйтесь</p>
+        <p class="title">Присоединяйтесь</p>
         <ul>
           <li>
             <a href=""><img src="./" alt="Инстаграм" /></a>
@@ -260,7 +280,7 @@
         </ul>
       </div>
       <div>
-        <p>Подпишитесь на розсылку</p>
+        <p class="title">Подпишитесь на розсылку</p>
       </div>
     </footer>
   </body>
