Скрыл ненужные заголовки

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </header>
     <!-- виды услуг -->
     <main>
-      <h1>Портфолио</h1>
+      <h1 class="is-hidden">Портфолио</h1>
       <section>
         <ul class="press">
           <li><button type="button">Все</button></li>
