--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Преимущества -->
 
       <section class="advantages">
-        <h2>Преимущества</h2>
+        <h2 class="is-hidden">Преимущества</h2>
         <ul>
           <li>
             <img src="./" alt="Антена" width="70" />
